generated/StipulaParser.py
# Generated from Stipula.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class StipulaParser ( Parser ):

    grammarFileName = "Stipula.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'stipula'", "'{'", "'}'", "'assets'", 
                     "','", "'fields'", "'='", "'agreement'", "'('", "')'", 
                     "'=>'", "'@'", "':'", "'['", "']'", "'if'", "'else'", 
                     "'-o'", "'->'", "'>>'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", 
                     "'*'", "'/'", "'now'", "<INVALID>", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NOT", "AND", "OR", "EQ", "NEQ", "LE", 
                      "GE", "LEQ", "GEQ", "PLUS", "MINUS", "TIMES", "DIVISION", 
                      "NOW", "BOOL", "TRUE", "FALSE", "TIMEDELTA", "NUMBER", 
                      "INTEGER", "DATESTRING", "STRING", "ID", "WS", "LINECOMMENT", 
                      "BLOCKCOMMENT" ]

    RULE_stipula = 0
    RULE_assetsDecl = 1
    RULE_fieldsDecl = 2
    RULE_fieldInit = 3
    RULE_agreement = 4
    RULE_agree = 5
    RULE_functionDecl = 6
    RULE_functionBody = 7
    RULE_statement = 8
    RULE_ifThenElse = 9
    RULE_assetOperation = 10
    RULE_fieldOperation = 11
    RULE_eventDecl = 12
    RULE_timeExpression = 13
    RULE_timeExpression1 = 14
    RULE_expression = 15
    RULE_expression1 = 16
    RULE_expression2 = 17
    RULE_expression3 = 18
    RULE_expression4 = 19
    RULE_expression5 = 20
    RULE_expression6 = 21

    ruleNames =  [ "stipula", "assetsDecl", "fieldsDecl", "fieldInit", "agreement", 
                   "agree", "functionDecl", "functionBody", "statement", 
                   "ifThenElse", "assetOperation", "fieldOperation", "eventDecl", 
                   "timeExpression", "timeExpression1", "expression", "expression1", 
                   "expression2", "expression3", "expression4", "expression5", 
                   "expression6" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    NOT=21
    AND=22
    OR=23
    EQ=24
    NEQ=25
    LE=26
    GE=27
    LEQ=28
    GEQ=29
    PLUS=30
    MINUS=31
    TIMES=32
    DIVISION=33
    NOW=34
    BOOL=35
    TRUE=36
    FALSE=37
    TIMEDELTA=38
    NUMBER=39
    INTEGER=40
    DATESTRING=41
    STRING=42
    ID=43
    WS=44
    LINECOMMENT=45
    BLOCKCOMMENT=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StipulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.contractId = None # Token

        def agreement(self):
            return self.getTypedRuleContext(StipulaParser.AgreementContext,0)


        def EOF(self):
            return self.getToken(StipulaParser.EOF, 0)

        def ID(self):
            return self.getToken(StipulaParser.ID, 0)

        def assetsDecl(self):
            return self.getTypedRuleContext(StipulaParser.AssetsDeclContext,0)


        def fieldsDecl(self):
            return self.getTypedRuleContext(StipulaParser.FieldsDeclContext,0)


        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StipulaParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(StipulaParser.FunctionDeclContext,i)


        def getRuleIndex(self):
            return StipulaParser.RULE_stipula

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStipula" ):
                return visitor.visitStipula(self)
            else:
                return visitor.visitChildren(self)




    def stipula(self):

        localctx = StipulaParser.StipulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_stipula)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(StipulaParser.T__0)
            self.state = 45
            localctx.contractId = self.match(StipulaParser.ID)
            self.state = 46
            self.match(StipulaParser.T__1)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 47
                self.assetsDecl()


            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 50
                self.fieldsDecl()


            self.state = 53
            self.agreement()
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.functionDecl()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==12):
                    break

            self.state = 59
            self.match(StipulaParser.T__2)
            self.state = 60
            self.match(StipulaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssetsDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token
            self.assetId = list() # of Tokens

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(StipulaParser.ID)
            else:
                return self.getToken(StipulaParser.ID, i)

        def getRuleIndex(self):
            return StipulaParser.RULE_assetsDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssetsDecl" ):
                return visitor.visitAssetsDecl(self)
            else:
                return visitor.visitChildren(self)




    def assetsDecl(self):

        localctx = StipulaParser.AssetsDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_assetsDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(StipulaParser.T__3)
            self.state = 63
            localctx._ID = self.match(StipulaParser.ID)
            localctx.assetId.append(localctx._ID)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 64
                self.match(StipulaParser.T__4)
                self.state = 65
                localctx._ID = self.match(StipulaParser.ID)
                localctx.assetId.append(localctx._ID)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldsDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fieldInit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StipulaParser.FieldInitContext)
            else:
                return self.getTypedRuleContext(StipulaParser.FieldInitContext,i)


        def getRuleIndex(self):
            return StipulaParser.RULE_fieldsDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldsDecl" ):
                return visitor.visitFieldsDecl(self)
            else:
                return visitor.visitChildren(self)




    def fieldsDecl(self):

        localctx = StipulaParser.FieldsDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_fieldsDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(StipulaParser.T__5)
            self.state = 72
            self.fieldInit()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 73
                self.match(StipulaParser.T__4)
                self.state = 74
                self.fieldInit()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.fieldId = None # Token
            self.value = None # Token

        def ID(self):
            return self.getToken(StipulaParser.ID, 0)

        def BOOL(self):
            return self.getToken(StipulaParser.BOOL, 0)

        def TIMEDELTA(self):
            return self.getToken(StipulaParser.TIMEDELTA, 0)

        def NUMBER(self):
            return self.getToken(StipulaParser.NUMBER, 0)

        def DATESTRING(self):
            return self.getToken(StipulaParser.DATESTRING, 0)

        def STRING(self):
            return self.getToken(StipulaParser.STRING, 0)

        def getRuleIndex(self):
            return StipulaParser.RULE_fieldInit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldInit" ):
                return visitor.visitFieldInit(self)
            else:
                return visitor.visitChildren(self)




    def fieldInit(self):

        localctx = StipulaParser.FieldInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fieldInit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            localctx.fieldId = self.match(StipulaParser.ID)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 81
                self.match(StipulaParser.T__6)
                self.state = 82
                localctx.value = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7456063225856) != 0)):
                    localctx.value = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AgreementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token
            self.partyId = list() # of Tokens
            self.stateId = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(StipulaParser.ID)
            else:
                return self.getToken(StipulaParser.ID, i)

        def agree(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StipulaParser.AgreeContext)
            else:
                return self.getTypedRuleContext(StipulaParser.AgreeContext,i)


        def getRuleIndex(self):
            return StipulaParser.RULE_agreement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAgreement" ):
                return visitor.visitAgreement(self)
            else:
                return visitor.visitChildren(self)




    def agreement(self):

        localctx = StipulaParser.AgreementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_agreement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(StipulaParser.T__7)
            self.state = 86
            self.match(StipulaParser.T__8)
            self.state = 87
            localctx._ID = self.match(StipulaParser.ID)
            localctx.partyId.append(localctx._ID)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 88
                self.match(StipulaParser.T__4)
                self.state = 89
                localctx._ID = self.match(StipulaParser.ID)
                localctx.partyId.append(localctx._ID)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self.match(StipulaParser.T__9)
            self.state = 96
            self.match(StipulaParser.T__1)
            self.state = 98 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 97
                self.agree()
                self.state = 100 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==43):
                    break

            self.state = 102
            self.match(StipulaParser.T__2)
            self.state = 103
            self.match(StipulaParser.T__10)
            self.state = 104
            self.match(StipulaParser.T__11)
            self.state = 105
            localctx.stateId = self.match(StipulaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AgreeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token
            self.partyId = list() # of Tokens
            self.fieldId = list() # of Tokens

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(StipulaParser.ID)
            else:
                return self.getToken(StipulaParser.ID, i)

        def getRuleIndex(self):
            return StipulaParser.RULE_agree

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAgree" ):
                return visitor.visitAgree(self)
            else:
                return visitor.visitChildren(self)




    def agree(self):

        localctx = StipulaParser.AgreeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_agree)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            localctx._ID = self.match(StipulaParser.ID)
            localctx.partyId.append(localctx._ID)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 108
                self.match(StipulaParser.T__4)
                self.state = 109
                localctx._ID = self.match(StipulaParser.ID)
                localctx.partyId.append(localctx._ID)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(StipulaParser.T__12)
            self.state = 116
            localctx._ID = self.match(StipulaParser.ID)
            localctx.fieldId.append(localctx._ID)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 117
                self.match(StipulaParser.T__4)
                self.state = 118
                localctx._ID = self.match(StipulaParser.ID)
                localctx.fieldId.append(localctx._ID)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.startStateId = None # Token
            self.partyId = None # Token
            self.functionId = None # Token
            self._ID = None # Token
            self.fieldId = list() # of Tokens
            self.assetId = list() # of Tokens
            self.precondition = None # ExpressionContext
            self.endStateId = None # Token

        def functionBody(self):
            return self.getTypedRuleContext(StipulaParser.FunctionBodyContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(StipulaParser.ID)
            else:
                return self.getToken(StipulaParser.ID, i)

        def expression(self):
            return self.getTypedRuleContext(StipulaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return StipulaParser.RULE_functionDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = StipulaParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(StipulaParser.T__11)
            self.state = 125
            localctx.startStateId = self.match(StipulaParser.ID)
            self.state = 126
            localctx.partyId = self.match(StipulaParser.ID)
            self.state = 127
            self.match(StipulaParser.T__12)
            self.state = 128
            localctx.functionId = self.match(StipulaParser.ID)
            self.state = 129
            self.match(StipulaParser.T__8)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==43:
                self.state = 130
                localctx._ID = self.match(StipulaParser.ID)
                localctx.fieldId.append(localctx._ID)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 131
                    self.match(StipulaParser.T__4)
                    self.state = 132
                    localctx._ID = self.match(StipulaParser.ID)
                    localctx.fieldId.append(localctx._ID)
                    self.state = 137
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 140
            self.match(StipulaParser.T__9)
            self.state = 141
            self.match(StipulaParser.T__13)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==43:
                self.state = 142
                localctx._ID = self.match(StipulaParser.ID)
                localctx.assetId.append(localctx._ID)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 143
                    self.match(StipulaParser.T__4)
                    self.state = 144
                    localctx._ID = self.match(StipulaParser.ID)
                    localctx.assetId.append(localctx._ID)
                    self.state = 149
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 152
            self.match(StipulaParser.T__14)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 153
                self.match(StipulaParser.T__8)
                self.state = 154
                localctx.precondition = self.expression()
                self.state = 155
                self.match(StipulaParser.T__9)


            self.state = 159
            self.match(StipulaParser.T__1)
            self.state = 160
            self.functionBody()
            self.state = 161
            self.match(StipulaParser.T__2)
            self.state = 162
            self.match(StipulaParser.T__10)
            self.state = 163
            self.match(StipulaParser.T__11)
            self.state = 164
            localctx.endStateId = self.match(StipulaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StipulaParser.StatementContext)
            else:
                return self.getTypedRuleContext(StipulaParser.StatementContext,i)


        def eventDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StipulaParser.EventDeclContext)
            else:
                return self.getTypedRuleContext(StipulaParser.EventDeclContext,i)


        def getRuleIndex(self):
            return StipulaParser.RULE_functionBody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionBody" ):
                return visitor.visitFunctionBody(self)
            else:
                return visitor.visitChildren(self)




    def functionBody(self):

        localctx = StipulaParser.FunctionBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functionBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 166
                    self.statement() 
                self.state = 171
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 11012296146944) != 0):
                self.state = 172
                self.eventDecl()
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifThenElse(self):
            return self.getTypedRuleContext(StipulaParser.IfThenElseContext,0)


        def assetOperation(self):
            return self.getTypedRuleContext(StipulaParser.AssetOperationContext,0)


        def fieldOperation(self):
            return self.getTypedRuleContext(StipulaParser.FieldOperationContext,0)


        def getRuleIndex(self):
            return StipulaParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = StipulaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.ifThenElse()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.assetOperation()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 180
                self.fieldOperation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfThenElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.condition = None # ExpressionContext
            self.ifBody = None # FunctionBodyContext
            self.elseBody = None # FunctionBodyContext

        def expression(self):
            return self.getTypedRuleContext(StipulaParser.ExpressionContext,0)


        def functionBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StipulaParser.FunctionBodyContext)
            else:
                return self.getTypedRuleContext(StipulaParser.FunctionBodyContext,i)


        def ifThenElse(self):
            return self.getTypedRuleContext(StipulaParser.IfThenElseContext,0)


        def getRuleIndex(self):
            return StipulaParser.RULE_ifThenElse

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfThenElse" ):
                return visitor.visitIfThenElse(self)
            else:
                return visitor.visitChildren(self)




    def ifThenElse(self):

        localctx = StipulaParser.IfThenElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifThenElse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(StipulaParser.T__15)
            self.state = 184
            self.match(StipulaParser.T__8)
            self.state = 185
            localctx.condition = self.expression()
            self.state = 186
            self.match(StipulaParser.T__9)
            self.state = 187
            self.match(StipulaParser.T__1)
            self.state = 188
            localctx.ifBody = self.functionBody()
            self.state = 189
            self.match(StipulaParser.T__2)
            self.state = 190
            self.match(StipulaParser.T__16)
            self.state = 196
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 191
                self.match(StipulaParser.T__1)
                self.state = 192
                localctx.elseBody = self.functionBody()
                self.state = 193
                self.match(StipulaParser.T__2)
                pass
            elif token in [16]:
                self.state = 195
                self.ifThenElse()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssetOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ExpressionContext
            self.right = None # Token
            self.destination = None # Token

        def expression(self):
            return self.getTypedRuleContext(StipulaParser.ExpressionContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(StipulaParser.ID)
            else:
                return self.getToken(StipulaParser.ID, i)

        def getRuleIndex(self):
            return StipulaParser.RULE_assetOperation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssetOperation" ):
                return visitor.visitAssetOperation(self)
            else:
                return visitor.visitChildren(self)




    def assetOperation(self):

        localctx = StipulaParser.AssetOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assetOperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            localctx.left = self.expression()
            self.state = 199
            self.match(StipulaParser.T__17)
            self.state = 202
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.state = 200
                localctx.right = self.match(StipulaParser.ID)
                self.state = 201
                self.match(StipulaParser.T__4)


            self.state = 204
            localctx.destination = self.match(StipulaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ExpressionContext
            self.right = None # Token

        def expression(self):
            return self.getTypedRuleContext(StipulaParser.ExpressionContext,0)


        def ID(self):
            return self.getToken(StipulaParser.ID, 0)

        def getRuleIndex(self):
            return StipulaParser.RULE_fieldOperation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldOperation" ):
                return visitor.visitFieldOperation(self)
            else:
                return visitor.visitChildren(self)




    def fieldOperation(self):

        localctx = StipulaParser.FieldOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_fieldOperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 206
            localctx.left = self.expression()
            self.state = 207
            self.match(StipulaParser.T__18)
            self.state = 208
            localctx.right = self.match(StipulaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.trigger = None # TimeExpressionContext
            self.startStateId = None # Token
            self.endStateId = None # Token

        def timeExpression(self):
            return self.getTypedRuleContext(StipulaParser.TimeExpressionContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(StipulaParser.ID)
            else:
                return self.getToken(StipulaParser.ID, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StipulaParser.StatementContext)
            else:
                return self.getTypedRuleContext(StipulaParser.StatementContext,i)


        def getRuleIndex(self):
            return StipulaParser.RULE_eventDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventDecl" ):
                return visitor.visitEventDecl(self)
            else:
                return visitor.visitChildren(self)




    def eventDecl(self):
